# rust-tracer

./: Cargo.toml
benches/: benchmark.rs  fov.rs  many_spheres.rs
examples/: checker_spheres.rs  depth_of_field.rs  distant_and_zoom_view.rs  earth.rs  many_spheres.rs  touching_spheres.rs  two_perlin_spheres.rs
images/: checker_spheres.ppm  depth_of_field.ppm  distant_view.ppm  earth.ppm  image.ppm  many_spheres.ppm  touching_spheres.ppm  two_perlin_spheres.ppm  zoom_view.ppm
src/: bounding_volume.rs  camera.rs  hittable.rs  lib.rs  main.rs  material.rs  prelude.rs  ray.rs  sphere.rs  texture.rs  world.rs
src/camera/: builder.rs
src/material/: dialectric.rs  dielectric.rs  lambertian.rs  metal.rs  reflect.rs  util.rs
