[package]
name = "rust-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
image = "0.24.7"
indicatif = { version = "0.17.6", features = ["rayon"] }
itertools = "0.11.0"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
